Add initial migration files and update entrypoint script for automatic migrations

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,6 +7,7 @@
 # -----------------------------------------------------------------------------
 # Django (wajib di production)
 # -----------------------------------------------------------------------------
+# Jika pakai Docker Compose: nilai yang mengandung $ harus di-escape jadi $$ (mis. $a8 -> $$a8$$).
 SECRET_KEY=your-secret-key-min-50-chars-gunakan-ini-di-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,.yourdomain.com
