--- a/backend/env.example
+++ b/backend/env.example
@@ -12,6 +12,15 @@ SECRET_KEY=your-secret-key-min-50-chars-gunakan-ini-di-production
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,.yourdomain.com
 
+# --- Production (data.kms-connect.com) ---
+# DEBUG=0
+# ALLOWED_HOSTS=data.kms-connect.com,YOUR_SERVER_IP
+# CSRF_TRUSTED_ORIGINS=https://data.kms-connect.com
+# After SSL setup (sudo ./deploy/ssl-setup.sh), set:
+# SECURE_SSL_REDIRECT=1
+# SESSION_COOKIE_SECURE=1
+# CSRF_COOKIE_SECURE=1
+
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL)
 # -----------------------------------------------------------------------------
