--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -18,5 +18,9 @@ http {
     keepalive_timeout 65;
     client_max_body_size 50M;
 
+    # Rate limiting (used by data.kms-connect.com.conf when SSL is enabled)
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=1r/s;
+
     include /etc/nginx/conf.d/*.conf;
 }
