--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -68,6 +68,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     container_name: kms-connect-celery
+    user: "1000:1000"
     command: celery -A backend worker -l info
     env_file:
       - .env
@@ -78,6 +79,8 @@ services:
       - media_volume:/app/media
       - static_volume:/app/staticfiles
     depends_on:
+      api:
+        condition: service_started
       db:
         condition: service_healthy
       redis:
@@ -91,6 +94,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     container_name: kms-connect-celery-beat
+    user: "1000:1000"
     command: celery -A backend beat -l info
     env_file:
       - .env
@@ -101,6 +105,8 @@ services:
       - media_volume:/app/media
       - static_volume:/app/staticfiles
     depends_on:
+      api:
+        condition: service_started
       db:
         condition: service_healthy
       redis:
