Remove deprecated Docker Compose block storage configuration and enhance documentation for DigitalOcean Spaces integration
- Deleted docker-compose.prod.block.yml as it is no longer needed for deployments.
- Updated env.example and backend settings to clarify media storage configuration for local and production environments.
- Enhanced QUICK_START.md and added SPACES.md to provide detailed instructions for using DigitalOcean Spaces with CDN for improved media delivery.
- Introduced reset-no-block.sh script to facilitate switching from block storage to Droplet-only deployments.

--- a/backend/env.example
+++ b/backend/env.example
@@ -131,8 +131,8 @@ DEFAULT_FROM_EMAIL=noreply@yourdomain.com
 # -----------------------------------------------------------------------------
 # Media storage (profile photos, applicant documents)
 # -----------------------------------------------------------------------------
-# Local dev: leave DO_SPACES_* unset → media stored in MEDIA_ROOT (backend/media/).
-# Production on DigitalOcean: set DO_SPACES_* → media stored in a Space (pip: django-storages[s3] boto3).
+# Local (DEBUG=True): always uses local MEDIA_ROOT. DO_SPACES_* are ignored.
+# Production (DEBUG=False): if DO_SPACES_BUCKET_NAME is set, media goes to Spaces.
 #
 # --- DigitalOcean Spaces (production on DO only) ---
 # Create a Space in DO Control Panel (same region as your Droplet, e.g. sgp1).
@@ -141,5 +141,7 @@ DEFAULT_FROM_EMAIL=noreply@yourdomain.com
 # DO_SPACES_REGION=sgp1
 # DO_SPACES_ACCESS_KEY_ID=your-spaces-key
 # DO_SPACES_SECRET_ACCESS_KEY=your-spaces-secret
-# Optional: CDN domain (enable CDN on Space, then set)
+# Optional: CDN domain (enable CDN on Space, then set) – for better performance
 # DO_SPACES_CDN_DOMAIN=your-space-name.sgp1.cdn.digitaloceanspaces.com
+# For CDN to serve files, set ACL to public-read:
+# DO_SPACES_ACL=public-read
