--- a/backend/nginx/data.kms-connect.com.conf
+++ b/backend/nginx/data.kms-connect.com.conf
@@ -42,10 +42,10 @@ server {
     ssl_session_timeout 10m;
     ssl_session_tickets off;
 
-    # OCSP Stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/nginx/ssl/data.kms-connect.com/chain.pem;
+    # OCSP Stapling (disabled if cert has no OCSP URL - avoids nginx warning)
+    # ssl_stapling on;
+    # ssl_stapling_verify on;
+    # ssl_trusted_certificate /etc/nginx/ssl/data.kms-connect.com/chain.pem;
 
     # Security Headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
