--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -20,10 +20,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # HTTP-only (default); replace with data.kms-connect.com.conf + ssl volume after SSL setup
-      - ./nginx/data.kms-connect.com.http-only.conf:/etc/nginx/conf.d/data.kms-connect.com.conf:ro
-      # - ./nginx/data.kms-connect.com.conf:/etc/nginx/conf.d/data.kms-connect.com.conf:ro
-      # - ./nginx/ssl:/etc/nginx/ssl:ro
+      # HTTPS config with SSL certificates
+      - ./nginx/data.kms-connect.com.conf:/etc/nginx/conf.d/data.kms-connect.com.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
       - media_volume:/app/media:ro
       - static_volume:/app/staticfiles:ro
       - ./logs/nginx:/var/log/nginx
