Refactor media file handling in Nginx configuration to serve from DigitalOcean Spaces CDN

--- a/backend/nginx/data.kms-connect.com.conf
+++ b/backend/nginx/data.kms-connect.com.conf
@@ -63,13 +63,8 @@ server {
     resolver 127.0.0.11 8.8.8.8 8.8.4.4 valid=30s;
     resolver_timeout 5s;
 
-    # Media files
-    location /media/ {
-        alias /app/media/;
-        expires 7d;
-        add_header Cache-Control "public";
-        access_log off;
-    }
+    # Media files - served from DigitalOcean Spaces CDN (Django returns CDN URLs)
+    # No nginx location needed - Django handles media URLs via Spaces
 
     # Static files
     location /static/ {
