feat(security): add comprehensive security headers and documentation
- Introduced SECURITY-HEADERS.md to document security headers in vercel.json.
- Configured various security headers including HSTS, CSP, and X-Frame-Options.
- Updated vercel.json and added vercel.production.json for production-specific headers.

feat(app): implement error boundaries and lazy loading for improved performance

- Added ErrorBoundary and RouteErrorBoundary components for error handling.
- Integrated lazy loading for page components in App.tsx to optimize bundle size.
- Introduced ErrorTest component for testing error boundaries during development.

refactor(auth): enhance authentication context with TanStack Query

- Replaced local state management with TanStack Query for user session management.
- Implemented useMeQuery and useRefreshTokenMutation hooks for better API interaction.
- Updated AuthProvider to handle user state and session expiration more effectively.

chore(vite): optimize build configuration for better performance

- Enhanced Vite configuration with advanced chunking and asset management.
- Set up manual chunk splitting for vendor libraries and organized asset output.
- Adjusted build settings for improved production performance and debugging.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,9 +7,15 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 
+# Install system dependencies and gosu
 RUN apt-get update \
-    && apt-get install --no-install-recommends -y build-essential libpq-dev curl \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get install --no-install-recommends -y \
+        build-essential \
+        libpq-dev \
+        curl \
+        gosu \
+    && rm -rf /var/lib/apt/lists/* \
+    && gosu nobody true
 
 FROM base AS deps
 COPY requirements.txt .
@@ -34,8 +40,9 @@ RUN mkdir -p /app/media/account/staff \
     && chmod +x entrypoint.sh \
     && chown -R appuser:appuser /app
 
-# Switch to non-root user
-USER appuser
+# Note: Don't switch to USER appuser here
+# The entrypoint.sh script needs to run as root first to fix volume permissions,
+# then it will switch to appuser using gosu
 
 EXPOSE 8000
 
