feat: Implement new registration flow with multi-step process
- Add RegistrationPageNew to manage the registration steps.
- Create RegistrationStep1Credentials for user credential input.
- Implement RegistrationStep2Ktp for KTP upload and data extraction.
- Introduce RegistrationProvider to manage registration state and logic.
- Integrate OCR processing for KTP images.
- Add necessary UI components and validation for input fields.
- Update pubspec.yaml to include camera and google_fonts dependencies.

--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Aplikasi memerlukan akses kamera untuk mengambil foto KTP Anda</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Aplikasi memerlukan akses galeri untuk memilih foto KTP Anda</string>
 </dict>
 </plist>
