--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   file_picker: ^8.1.4
   image_cropper: ^8.0.2
   cached_network_image: ^3.4.1
+  camera: ^0.11.0+2
   
   # Authentication
   google_sign_in: ^6.2.1
@@ -80,6 +81,7 @@ dependencies:
   freezed: ^2.5.7
   json_serializable: ^6.8.0
   build_runner: ^2.4.13
+  google_fonts: ^8.0.2
 
 dev_dependencies:
   flutter_test:
